--- a/q/225808.html
+++ b/q/225808.html
@@ -26,20 +26,49 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>213</td><td>Ruby 3+</td><td>240709T060038Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/274036#274036">Aearnus</a></td></tr>
-<tr d-ix="1"><td>001</td><td>Underload</td><td>210715T151917Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/231423#231423">Helen</a></td></tr>
-<tr d-ix="2"><td>080</td><td>CJam</td><td>210715T164405Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/231428#231428">Helen</a></td></tr>
-<tr d-ix="3"><td>087</td><td>Charcoal</td><td>210518T102451Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225895#225895">Neil</a></td></tr>
-<tr d-ix="4"><td>189</td><td>JavaScript V8</td><td>210518T054331Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225881#225881">tsh</a></td></tr>
-<tr d-ix="5"><td>221</td><td>JavaScript Node.js</td><td>210517T174227Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225836#225836">Arnauld</a></td></tr>
-<tr d-ix="6"><td>072</td><td>Stax</td><td>210517T170123Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225830#225830">Razetime</a></td></tr>
-<tr d-ix="7"><td>322</td><td>Haskell</td><td>210517T181526Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225838#225838">NoLonger</a></td></tr>
-<tr d-ix="8"><td>093</td><td>Jelly</td><td>210517T230046Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225853#225853">Nick Ken</a></td></tr>
-<tr d-ix="9"><td>238</td><td>Python 3</td><td>210517T154938Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225821#225821">ovs</a></td></tr>
-<tr d-ix="10"><td>252</td><td>Haskell</td><td>210517T205545Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225844#225844">Delfad0r</a></td></tr>
-<tr d-ix="11"><td>157</td><td>Retina</td><td>210517T211554Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225846#225846">Neil</a></td></tr>
+<tr d-ix="0"><td>218</td><td>JavaScript v8</td><td>240709T102243Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/274040#274040">zptr1</a></td></tr>
+<tr d-ix="1"><td>213</td><td>Ruby 3+</td><td>240709T060038Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/274036#274036">Aearnus</a></td></tr>
+<tr d-ix="2"><td>001</td><td>Underload</td><td>210715T151917Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/231423#231423">Helen</a></td></tr>
+<tr d-ix="3"><td>080</td><td>CJam</td><td>210715T164405Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/231428#231428">Helen</a></td></tr>
+<tr d-ix="4"><td>087</td><td>Charcoal</td><td>210518T102451Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225895#225895">Neil</a></td></tr>
+<tr d-ix="5"><td>189</td><td>JavaScript V8</td><td>210518T054331Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225881#225881">tsh</a></td></tr>
+<tr d-ix="6"><td>221</td><td>JavaScript Node.js</td><td>210517T174227Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225836#225836">Arnauld</a></td></tr>
+<tr d-ix="7"><td>072</td><td>Stax</td><td>210517T170123Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225830#225830">Razetime</a></td></tr>
+<tr d-ix="8"><td>322</td><td>Haskell</td><td>210517T181526Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225838#225838">NoLonger</a></td></tr>
+<tr d-ix="9"><td>093</td><td>Jelly</td><td>210517T230046Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225853#225853">Nick Ken</a></td></tr>
+<tr d-ix="10"><td>238</td><td>Python 3</td><td>210517T154938Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225821#225821">ovs</a></td></tr>
+<tr d-ix="11"><td>252</td><td>Haskell</td><td>210517T205545Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225844#225844">Delfad0r</a></td></tr>
+<tr d-ix="12"><td>157</td><td>Retina</td><td>210517T211554Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225846#225846">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby 3+</a>, 213 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (v8)</a>, 218 bytes</h1>
+<pre class="lang-js prettyprint-override"><code>F=(p,s=[],d=0,o=x=&quot;&quot;)=&gt;eval('for(c of p)c==&quot;(&quot;?d++?x+=c:x=&quot;&quot;M)--d?x+=c:0(x):d?x+=cM~0(1,1)M:0(t=1,t)M!1M*(t=1,0(1+t))Ma0(`(${1})`)M^o+=F(1,s)MSo+=1:0;o'.replace(/\d|M./g,([a,b])=&gt;b?`:c=='${b}'?`:+a?&quot;s.pop()&quot;:&quot;s.push&quot;))
+</code></pre>
+<pre class="lang-js prettyprint-override"><code>F=(
+  p, // source code (as string)
+  s=[], // stack
+  d=0, // depth of the parentheses
+  o=x=&quot;&quot; // o is the output, x is the current string in parentheses
+)=&gt;eval(`
+  for(c of p) // for every character
+    c==&quot;(&quot;? d++?x+=c:x=&quot;&quot; // if the character is (, increment d. if d was 0, set x to an empty string
+    M) --d?x+=c:0(x)      // if the character is ), decrement d. if d is still &gt;0, add ) to x, otherwise push x
+    :d?x+=c               // if d (depth) is &gt;0, add character to x and ignore it
+    M~0(1,1)              // swap
+    M:0(t=1,t)            // dup
+    M!1                   // drop
+    M*(t=1,0(1+t))        // concat
+    Ma0(\`(${1})\`)       // enclose
+    M^o+=F(1,s)           // exec
+    MSo+=1:0;o            // print
+  `.replace(
+    // replace 0s with s.push and 1s with s.pop()
+    // and `Mchar` with `:c=='char'?`
+    /\d|M./g,([a,b])=&gt;b?`:c=='${b}'?`:+a?&quot;s.pop()&quot;:&quot;s.push&quot;
+  )
+)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby 3+</a>, 213 bytes</h1>
 <pre class="lang-rb prettyprint-override"><code>$s=[]
 def g(i)=i==&quot;&quot;?0:(s=$s;i=~/^(\(((\g&lt;1&gt;|[^()])*)\))/?(s&lt;&lt;$2;g $'):('gqVas&lt;&lt;&quot;(#{q})&quot;V~a,b=q,q;s&lt;&lt;a;s&lt;&lt;bV:s&lt;&lt;s[-1]V!qV%a,b=q,q;s&lt;&lt;b+aVSprintqV'=~/#{i[0].tr'*','%'}([^V]+)/;eval($1.gsub'q','(s.pop)');g i[1..]))
 </code></pre>
@@ -48,7 +77,7 @@ def g(i)=i==&quot;&quot;?0:(s=$s;i=~/^(\(((\g&lt;1&gt;|[^()])*)\))/?(s&lt;&lt;$2
 <p>Note that this uses the new <code>def</code> syntax from Ruby 3 so it won't parse on previous versions.</p>
 <p>Does a few regex tricks, like matching paren blocks in one pass or saving a few bytes by not escaping the start anchor before it's interpolated into the instruction decoding regex. This entry encodes the Undercode instruction names and does instruction lookup in a similar way to <a href="https://codegolf.stackexchange.com/a/225881/19339">this entry</a>.</p>
 </div>
-<div id="pu1" class="pu"><h1 id="underload-1-byte-zsd1"><a href="https://esolangs.org/wiki/Underload" rel="nofollow noreferrer">Underload</a>, 1 byte</h1>
+<div id="pu2" class="pu"><h1 id="underload-1-byte-zsd1"><a href="https://esolangs.org/wiki/Underload" rel="nofollow noreferrer">Underload</a>, 1 byte</h1>
 <pre><code>^
 </code></pre>
 <p><b><a href="https://tio.run/##K81LSS3KyU9M@a/xXyNRwypOUytY0yruv2bcfwA" rel="nofollow noreferrer">Try it online!</a></b></p>
@@ -57,7 +86,7 @@ def g(i)=i==&quot;&quot;?0:(s=$s;i=~/^(\(((\g&lt;1&gt;|[^()])*)\))/?(s&lt;&lt;$2
 <hr />
 <p><i>This is only a joke/non-competing answer, since although interpreting languages in themselves isn't always trivial/boring, in this case it really is.</i></p>
 </div>
-<div id="pu2" class="pu"><h1 id="cjam-80-bytes-haqf"><a href="https://sourceforge.net/p/cjam/wiki/Home/" rel="nofollow noreferrer">CJam</a>, 80 bytes</h1>
+<div id="pu3" class="pu"><h1 id="cjam-80-bytes-haqf"><a href="https://sourceforge.net/p/cjam/wiki/Home/" rel="nofollow noreferrer">CJam</a>, 80 bytes</h1>
 <pre><code>{`(;);EDero}:S{[\\]`(;);&quot;} {&quot;/~+~}:B{a`&quot;[]&quot;Eer~}:Cq&quot;()~:!*^a&quot;:D&quot;{}\_;B~C&quot;:Eer~];
 </code></pre>
 <p><b><a href="http://cjam.aditsu.net/#code=%7B%60(%3B)%3BEDero%7D%3AS%7B%5B%5C%5C%5D%60(%3B)%3B%22%7D%20%7B%22%2F%7E%2B%7E%7D%3AB%7Ba%60%22%5B%5D%22Eer%7D%3ACq%22()%7E%3A!*%5Ea%22%3AD%22%7B%7D%5C_%3BB%7EC%22%3AEer%7E%5D%3B&amp;input=%7BC%7B_%7E%7DBS%7D" rel="nofollow noreferrer">Try it online!</a></b></p>
@@ -109,7 +138,7 @@ def g(i)=i==&quot;&quot;?0:(s=$s;i=~/^(\(((\g&lt;1&gt;|[^()])*)\))/?(s&lt;&lt;$2
 <p>It takes 1 character to run the converted program after we've made it: <code>~</code>.</p>
 <p>After this we need to clean up our functions, since they are sitting on the stack and <i>will</i> be printed if we don't get rid of them. We do this by collecting everything left on the stack and popping it: <code>];</code>.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 87 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 87 bytes</h1>
 <pre><code>≔⪪⮌Ｓ¹θＷθ≡⊟θ~ＦＥ²⊟υ⊞υκ:⊞υ§υ±¹!≔⊟υδ*⊞υ⪫⮌Ｅ²⊟υω(⊞υ⭆⊖Ｌ⌊ΦＥθ…⮌θ⊕λ›№κ)№κ(⊟θa⊞υ⪫()⊟υ^Ｆ⪪⮌⊟υ¹⊞θκS⊟υ
 </code></pre>
 <p><a href="https://tio.run/##XZFNT8MwDIbv@xUmJ2cKh3Esp2kIVMTQRO@TotZro2Vpm6YrCMFfL@m6frBIkRL79RO/TpxJG@dSt@26qlRqMCq0cvhBZ7IVYWiK2kXOKpMi5wJWfpf8cdFkShNgyaFqlIszwF1e@CuH70UsKwL2ywI45BZwKwt8ENDla@4Fu7rKsBZw9JheGnjpEF270CT02R3fKZWOcOWLBuWdV1777HkCkjG5nGFec2VGEzcdCGgmIs6Kep@d@oliSycyjhJ8I5O6DLfKqFN9wmelHdkLsxSw@Yo1bTJPHh4rPT80U7m@vPhiSXZlm7w2Do8CGGc@PF2R8cvq2yxnnuWtLYacjW4G1X4Y9///u6q6j7tOvpxPPurY3rTDEffTtigx2PNlxIN9e3/Wfw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -144,7 +173,7 @@ def g(i)=i==&quot;&quot;?0:(s=$s;i=~/^(\(((\g&lt;1&gt;|[^()])*)\))/?(s&lt;&lt;$2
 </code></pre>
 <p>If it's a <code>S</code> then pop and print the top of the stack.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 189 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 189 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([C,...P],X=T=L='',Y,...S)=&gt;C?eval(`f(P,${L*(L-=C=='('?-1:C==')')?'X+C,Y':`
 ^P.unshift(...X)&amp;&amp;Y
@@ -190,7 +219,7 @@ S(T+=X,Y)
 ):T // Everything done, output goes here
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s> 237 </s> 221 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s> 237 </s> 221 bytes</h1>
 <p><em>Saved 8 bytes thanks to @tsh</em></p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([c,...s],S=p=[O=o=''])=&gt;c?((n=Buffer(c)[0],n-40?n-41?p:--p||!S.push(o):p++)?o+=c:eval(&quot;o=''0(q=1,1)+q)0q=1,q)/1/s=[...1,...s]/01,1)0`(${1})`)/O+=1&quot;.replace(/\d/g,n=&gt;+n?'S.pop()':'/S.push(').split`/`[n%15%11]),f(s,S)):O
@@ -252,7 +281,7 @@ S(T+=X,Y)
     O                      //   we're done: return the final output
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, <sup><s>88</s></sup> 72 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, <sup><s>88</s></sup> 72 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ï9╓╩¢▬'D└⌡○♠↨ó•ó♀▒m5E■V\╖O|é░xÄ9ª╝╬K╝╝∩1◄3`-2*♫▓☼╤?÷°ZôyZ┘¿{ClñI▀«╛■ß«R9
 </code></pre>
 <p><a href="https://staxlang.xyz/#p=8b39d6ca9b162744c0f5090617a207a20cb16d3545fe565cb74f7c82b0788e39a6bcce4bbcbcef311133602d322a0eb20fd13ff6f85a93795ad9a87b436ca449dfaebefee1ae5239&amp;i=%28Hello,+world%21%29S%0A%28%21%40%23%24%25%5E%26*%28%29%29S%0A%28a%29%28b%29%7ESS%0A%28a%29%28b%29%21S%0A%28a%29%28b%29*S%0A%28a%29aS%0A%28b%29%28a%29%5ES%0A%28a%28%3A%5E%29*S%29%3A%5E%0A%28%3AaSS%29%3AaSS%0A%28%3AaS%28%3A%5ES%5E%3A%29Sa%3A%29%3A%5ES%5E%3A%28%3AaS%28%3A%5ES%5E%3A%29Sa%3A%29%0A%28%3A%3A%3A%3A%29%3A%28%3A%28%28%5E%3A%28%29%7E%28%28%3A%29*%7E%5E%29a%7E*%5E%21%21%28%29%7E%5E%29%29%7E*%28%29%7E%5E%5E%29%7E%28%5Ea%28*%7E%5E%29*a%7E*%28%29%7E%5E%21%28%29%7E%5E%29a%7E**%5E%21%21%5ES&amp;m=2" rel="nofollow noreferrer">Run and debug it</a></p>
@@ -282,7 +311,7 @@ S(T+=X,Y)
  y # push y at the end(if empty, ends the program)
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1>Haskell, 322 bytes</h1>
+<div id="pu8" class="pu"><h1>Haskell, 322 bytes</h1>
 <p>Function is <code>l []</code>.</p>
 <pre><code>l(s:t:v)('~':x)=l(t:s:v)x
 l(s:t)(':':x)=l(s:s:t)x
@@ -298,7 +327,7 @@ h t n a('(':x)=h t(n+1)('(':a)x
 h t n a(c:x)=h t n(c:a)x
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 93 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 93 bytes</h1>
 <pre><code>“Ṫ,Ṫ;@“0ịṭ“Ṗ“Ṫ;@Ṫṭ“Ṫ⁾()jṭ“ṪȮṛ”W€“~:!*aS”żẎy
 Żi@þØ(Ä_/Ṣ⁼Ø.ƊƝœp;1ÇṾ;”ṭWƊƭ€ṖẎ
 ṪÇß}v⁼”^$?@ƒ
@@ -308,7 +337,7 @@ WÇṛ“”
 <p>This feels far too long!</p>
 <p>A full program taking an Underload program as it’s argument and printing the output to STDOUT. In principle, translates the program to a series of Jelly chains and executes them, with special handling for the <code>^</code> command.</p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <s>243</s> <s>242</s> 238 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <s>243</s> <s>242</s> 238 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>s=input()
 q=[]
@@ -345,7 +374,7 @@ while the program has instructions left:
     execute the code for the current command
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <sup><s>272</s>…</sup> 252 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <sup><s>272</s>…</sup> 252 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>([]?)
 s?('(':r)|l&lt;-1%r=(take(l-1)r:s)?drop l r
@@ -365,7 +394,7 @@ n%(c:r)=1+(n+sum[1|c=='(']-sum[1|c==')'])%r
 <p>The relevant function is <code>([]?)</code>, which takes an Underload program as a <code>String</code> as input and returns a <code>String</code> as output.</p>
 <p>There is already an interesting Haskell answer, make sure to go upvote that as well (once it's fixed)! <s>I decided to post my own answer because, well, I finally found a use for the <code>Monad</code> instance of <code>(,) a</code>!</s> Yeah, I knew it couldn't last...</p>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="noreferrer">Retina</a>, 157 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="noreferrer">Retina</a>, 157 bytes</h1>
 <pre><code>.{/^S/&amp;*&gt;,G1`
 ^((\^)|[S!])(.*)¶(.*)|^:(.*(¶.*))
 $#2*$4$3$5$6
