--- a/q/274018.html
+++ b/q/274018.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>060</td><td>Python</td><td>240708T170630Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274027#274027">Mukundan</a></td></tr>
+<tr d-ix="0"><td>058</td><td>Python</td><td>240708T170630Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274027#274027">Mukundan</a></td></tr>
 <tr d-ix="1"><td>nan</td><td>Vyxal</td><td>240709T051457Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274035#274035">lyxal</a></td></tr>
 <tr d-ix="2"><td>020</td><td>05AB1E</td><td>240709T080208Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274038#274038">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>051</td><td>JavaScript ES6</td><td>240708T161437Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274023#274023">Arnauld</a></td></tr>
@@ -36,11 +36,11 @@
 <tr d-ix="7"><td>030</td><td>sed r</td><td>240708T164928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274026#274026">guest430</a></td></tr>
 <tr d-ix="8"><td>031</td><td>Perl 5 p</td><td>240708T162921Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274024#274024">Xcali</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>69</s> <s>62</s></sup> 60 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>69</s> <s>62</s> <s>60</s></sup> 58 bytes</h1>
 <p>Takes input as a bytestring</p>
-<pre class="lang-python prettyprint-override"><code>lambda x,s=0:len({(35782400&gt;&gt;i%32^(s:=s^1))&amp;1for i in x})==1
+<pre class="lang-python prettyprint-override"><code>lambda x,s=0:len({35782400&gt;&gt;i%32&amp;1^(s:=s^1)for i in x})==1
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=dZDRSgJBFIbpdp_iMFDMwK6sWiTSCkIWQWlk4IUpTDqLB8fZaWckJXqSbryxJ-hl6mma3fXGWg_MDJzv__9zmI9PvbazRG22MUTwtF3aOGh8X0i-eJ5yWPkmCptSKPpG62fnjdppGLZaeFyvjalpRmZcZeykGicpIKCC1TuLouou4ytrS1QiI4l2GSFreuAKlfZBrLQbuOCaGptW3EHXzOQVoyVaSgLCWC4vlPkdAbHpUhAvB8nSOhBTl1cRapJMBd1ZdIrK0iG5at_cEh_IfbvfJ6PhLsP5Rj6kQqeZlTketJzKtVmx--bnqGHmQlucoFlAXkHxZOO9TveyN7jrdB_hP3tZcmXRrqGETdFoIQHK2Jyv-dyUMw77tcd4KYu5NMKzwtiDcPDQ614fdM7QvKKUMUf5D_5ZZw8WP_gL" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=dZDRSsMwFIbxtk9xCCgNtKPbFEehg4FTBN3ECbuYG8QtZYdlaWxS3BCfxJvdzCfwZfRpTNvdzHUHksD5_v8_h3x-qbWZJ3KzjSGC521mYr_1Ewq2fJkxWHk6CkLBpfvevLhsNc6DoN3G02bjrD5xdRjpSZ3GSQoIKGH1QaOovkv4ztsCJc9JomxCQEMHbKFUHvCVsuOWTLnapDV70DZzeU0rgcYlPqG0kJfK4o6AmDTjxClAkhkLYtfm1bicJjPu7iwqRWncEbnu3N4RD8hDZzAg49Euw_rGHqRcpbmVWu63rcq2abn75vekpRdcGZyiXkJRfvnk451u76o_vO_2nuCQvWZMGjRrqGAz1IoLgCq2YGu20NWMwX7tMVbJYiY0dwzX5igcPvZ7N0edc9RvKETMUBzAf-vswfIH_wA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 121 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 15.125 bytes</h1>
 <pre><code>[⇩ƛk•5vẇ∑vFT;f¯AI
