--- a/q/274018.html
+++ b/q/274018.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>055</td><td>Python</td><td>240708T170630Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274027#274027">Mukundan</a></td></tr>
-<tr d-ix="1"><td>nan</td><td>Vyxal</td><td>240709T051457Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274035#274035">lyxal</a></td></tr>
-<tr d-ix="2"><td>020</td><td>05AB1E</td><td>240709T080208Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274038#274038">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>019</td><td>05AB1E</td><td>240709T080208Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274038#274038">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>055</td><td>Python</td><td>240708T170630Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274027#274027">Mukundan</a></td></tr>
+<tr d-ix="2"><td>nan</td><td>Vyxal</td><td>240709T051457Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274035#274035">lyxal</a></td></tr>
 <tr d-ix="3"><td>051</td><td>JavaScript ES6</td><td>240708T161437Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274023#274023">Arnauld</a></td></tr>
 <tr d-ix="4"><td>023</td><td>Charcoal</td><td>240708T225518Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274032#274032">Neil</a></td></tr>
 <tr d-ix="5"><td>076</td><td>Google Sheets</td><td>240708T184726Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274028#274028">z..</a></td></tr>
@@ -36,14 +36,44 @@
 <tr d-ix="7"><td>030</td><td>sed r</td><td>240708T164928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274026#274026">guest430</a></td></tr>
 <tr d-ix="8"><td>031</td><td>Perl 5 p</td><td>240708T162921Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274024#274024">Xcali</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>69</s> <s>62</s> <s>60</s> <s>58</s></sup> 55 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>20</s> 19 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>žV5δôøJIlδå€üαßIgΘì
+</code></pre>
+<p>Input as a list of characters.<br />
+Output as a 05AB1E truthy/falsey result (only 1 is truthy in 05AB1E), so this will output either <code>01</code> or <code>1</code> as truthy and <code>00</code> or <code>0</code> as falsey.<br />
+Uses the QWERTY keyboard.</p>
+<p><a href="https://tio.run/##yy9OTMpM/f//6L4w03NbDm85vMPLMwfIWPqoac3hPec2Hp7vmX5uxuE1//9HKxUr6ShlA3EqEBcAcQkQZwJxMpQGyecqxQIA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfWXw4Qn/j@4LMz235fCWwzu8inOAjKWPmtYc3nNu4@H5xennZhxe89/FPlNJQaOkqLQko1JT6fBqICctMac4Fcip1fkfrVScnVpQkpmcWZyrpKPk6ufiH@7r6hcCZBeWJuaVZJZUApkpmcUFqTlARnZiZWJ2MZCRCMIgoiS1uARIhQf5@7mDuBmZxeWZOTlpiZkg9UqxAA" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>žV       # Push [&quot;qwertyuiop&quot;,&quot;asdfghjkl&quot;,&quot;zxcvbnm&quot;]
+   δ     # Map over each string:
+  5 ô    #  Split it into parts of size 5
+     ø   # Zip/transpose; swapping rows/columns
+      J  # Join the inner lists together:
+         #  [&quot;qwertasdfgzxcvb&quot;,&quot;yuiophjklnm&quot;]
+I        # Push the input-list
+ l       # Lowercase each inner character
+  δ      # Double-vectorized over the two lists:
+   å     #  Contains-check
+    €    # Map over each inner list:
+     ü   #  For each overlapping pair in this list:
+      α  #   Take the absolute difference of the pair
+       ß # Push the flattened minimum
+         # (1 if all are truthy; 0 if any are falsey; &quot;&quot; if empty)
+Ig       # Push the length of the input-list
+  Θ      # Check whether this length is exactly 1
+   ì     # Prepend it in front of the earlier check
+         # (after which the result is output implicitly)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>69</s> <s>62</s> <s>60</s> <s>58</s></sup> 55 bytes</h1>
 <p>-7 bytes thanks to <a href="https://codegolf.stackexchange.com/users/20260/xnor">@xnor</a>. I independently arrived at a similar solution (only the first -4 though) since I didn't notice their comment for a while.</p>
 <p>Takes input as a bytestring</p>
 <pre class="lang-python prettyprint-override"><code>lambda x,n=35782400:len({(n:=~n)&gt;&gt;j%32&amp;1for j in x})==1
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=dZDfSsMwFMbxtk9xCCgJtGN_lJVBCwOnCLqJE3YxdxHXlGXL0tikuCH6It7sZj6BL6NPY9ruZq47kAS-3_edc8jnl1qbWSI32xgCeNpmJvb8n7agy-eIwsqVQeui7TfP6_WOYBK_YdkJPiQJw_lpq3nWiJMU5sAlrN5JEDR28e9cFlyynCTK5uqk44AtLpULbKXsrCVVWJu0Zg-3Ym6vaSW4wchDhBT20lncASCTZgw5BUgyY0GMbb8ak9MkYngXUSmXBo_RVffmFrmA7rvDIZqMdz1sbuJCylSaR4nlXmhdVibl7pvfE18vmDJ8yvUSivLKJx_v9PqXg9Fdr_8Ih-wlo9Jws4YKFnGtmACoYgu6pgtdzSjs1x6jlSymQjPHMG2OwtHDoH99NDnj-pULEVMuDuC_dfZg-YN_" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 121 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 15.125 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 121 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 15.125 bytes</h1>
 <pre><code>[⇩ƛk•5vẇ∑vFT;f¯AI
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBPSIsIiIsIlvih6nGm2vigKI1duG6h+KIkXZGVDtmwq9BSSIsIl1gIGA9Iiwic2tlcHRpY2lzbVxuRU5ET1dNRU5UXG5xdWFudGl0eVxuZGlzcGVsXG5rYXlha3NcbmFcbmFhXG50ZXN0XG5XUk9OR1xudGhpc3dpbGxmYWlsXG5cIlwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -70,38 +100,6 @@
 💎
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 20 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>žV5δôøJIlδå€üαßIágΘì
-</code></pre>
-<p>Input as a list of characters.<br />
-Output as a 05AB1E truthy/falsey result (only 1 is truthy in 05AB1E), so this will output either <code>01</code> or <code>1</code> as truthy and <code>00</code>, <code>0</code>, or <code>10</code> as falsey.<br />
-Uses the QWERTY keyboard.</p>
-<p><a href="https://tio.run/##yy9OTMpM/f//6L4w03NbDm85vMPLMwfIWPqoac3hPec2Hp7veXhh@rkZh9f8/x@tVKyko5QNxKlAXADEJUCcCcTJUBokn6sUCwA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfWXw4Qn/j@4LMz235fCWwzu8inOAjKWPmtYc3nNu4@H5xYcXpp@bcXjNfxf7TCUFjZKi0pKMSk2lw6uBnLTEnOJUIKdW53@0UnF2akFJZnJmca6SjpKrn4t/uK@rXwiQXViamFeSWVIJZKZkFhek5gAZ2YmVidnFQEYiCIOIktTiEiAVHuTv5w7iZmQWl2fm5KQlZoLUn9sKUgcmz20F68mBcnISlWIB" rel="nofollow noreferrer">verify all test cases</a>.</p>
-<p><strong>Explanation:</strong></p>
-
-<pre class="lang-python prettyprint-override"><code>žV       # Push [&quot;qwertyuiop&quot;,&quot;asdfghjkl&quot;,&quot;zxcvbnm&quot;]
-   δ     # Map over each string:
-  5 ô    #  Split it into parts of size 5
-     ø   # Zip/transpose; swapping rows/columns
-      J  # Join the inner lists together:
-         #  [&quot;qwertasdfgzxcvb&quot;,&quot;yuiophjklnm&quot;]
-I        # Push the input-list
- l       # Lowercase each inner character
-  δ      # Double-vectorized over the two lists:
-   å     #  Contains-check
-    €    # Map over each inner list:
-     ü   #  For each overlapping pair in this list:
-      α  #   Take the absolute difference of the pair
-       ß # Push the flattened minimum
-         # (1 if all are truthy; 0 if any are falsey; &quot;&quot; if empty)
-I        # Push the input-list again
- á       # Only keep all letters of the list
-  g      # Then pop and push its length
-   Θ     # Check whether this length is exactly 1
-    ì    # Prepend it in front of the earlier check
-         # (after which the result is output implicitly)
-</code></pre>
 </div>
 <div id="pu3" class="pu"><h1>JavaScript (ES6), 51 bytes</h1>
 <p>Expects an array of characters. Returns <strong>0</strong> for <em>&quot;ping-pong&quot;</em> or <strong>1</strong> for <em>&quot;empty or not ping-pong&quot;</em>.</p>
