--- a/q/225808.html
+++ b/q/225808.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>209</td><td>JavaScript v8</td><td>240709T102243Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/274040#274040">zptr1</a></td></tr>
+<tr d-ix="0"><td>208</td><td>JavaScript v8</td><td>240709T102243Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/274040#274040">zptr1</a></td></tr>
 <tr d-ix="1"><td>213</td><td>Ruby 3+</td><td>240709T060038Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/274036#274036">Aearnus</a></td></tr>
 <tr d-ix="2"><td>001</td><td>Underload</td><td>210715T151917Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/231423#231423">Helen</a></td></tr>
 <tr d-ix="3"><td>080</td><td>CJam</td><td>210715T164405Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/231428#231428">Helen</a></td></tr>
@@ -40,31 +40,31 @@
 <tr d-ix="11"><td>252</td><td>Haskell</td><td>210517T205545Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225844#225844">Delfad0r</a></td></tr>
 <tr d-ix="12"><td>157</td><td>Retina</td><td>210517T211554Z</td><td><a href="https://codegolf.stackexchange.com/questions/225808/interpret-underload/225846#225846">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (v8)</a>, 209 bytes</h1>
-<pre class="lang-js prettyprint-override"><code>F=(p,s=[],o=d=&quot;&quot;)=&gt;eval('for(c of p)c==&quot;(&quot;?x=d++?x+c:&quot;&quot;M)--d?x+=c:0x):d?x+=cM~01,1)M:0t=1,t)M!1M*(t=1,01+t))Ma0`(${1})`)M^o+=F(1,s)MSo+=1:o;o'.replace(/\d|M./g,([a,b])=&gt;b?`:c=='${b}'?`:+a?&quot;s.pop()&quot;:&quot;s.push(&quot;))
+<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (v8)</a>, 208 bytes</h1>
+<pre class="lang-js prettyprint-override"><code>F=(p,s=[],o=d=&quot;&quot;)=&gt;eval('for(c of p)c==&quot;(&quot;?0d++?1+c:&quot;&quot;)M)--d&amp;&amp;01+c):d?01+c)M~01,1)M:0t=1,t)M!1M*(t=1,01+t))Ma0`(${1})`)M^o+=F(1,s)MSo+=1:o;o'.replace(/\d|M./g,([a,b])=&gt;b?`:c=='${b}'?`:+a?&quot;s.pop()&quot;:&quot;s.push(&quot;))
 </code></pre>
 <pre class="lang-js prettyprint-override"><code>F=(
   p,     // source code (as string)
   s=[],  // stack
   o=     // output
-  d=&quot;&quot;   // parentheses depth
+  d=&quot;&quot;   // depth of the parentheses
 )=&gt;eval(`
   for(c of p) // for every character
-    c==&quot;(&quot;? x=d++?x+c:&quot;&quot;  // if the character is (, increment d. if d is &gt;0, add ( to x, otherwise set x to &quot;&quot;
-    M)      --d?x+=c:0x)  // if the character is ), decrement d. if d is still &gt;0, add ) to x, otherwise push x
-    :d?x+=c               // if d (depth) is &gt;0, add character to x and ignore it
-    M~01,1)               // swap
-    M:0t=1,t)             // dup
-    M!1                   // drop
-    M*(t=1,01+t))         // concat
-    Ma0\`(\${1})\`)       // enclose
-    M^o+=F(1,s)           // exec
-    MSo+=1                // print
+    c==&quot;(&quot;?0d++?1+c:&quot;&quot;) // open parentheses
+    @)--d&amp;&amp;01+c)        // close parentheses
+    :d?01+c)            // inside of parentheses
+    @~01,1)             // swap
+    @:0t=1,t)           // dup
+    @!1                 // drop
+    @*(t=1,01+t))       // concat
+    @a0\`(\${1})\`)     // enclose
+    @^o+=F(1,s)         // exec
+    @So+=1              // print
     :o;o
   `.replace(
     // replace 0s with `s.push(` and 1s with `s.pop()`
-    // and `Mchar` with `:c=='char'?`
-    /\d|M./g,([a,b])=&gt;b?`:c=='${b}'?`:+a?&quot;s.pop()&quot;:&quot;s.push(&quot;
+    // and `@char` with `:c=='char'?`
+    /\d|@./g,([a,b])=&gt;b?`:c=='${b}'?`:+a?&quot;s.pop()&quot;:&quot;s.push(&quot;
   )
 )
 </code></pre>
