--- a/q/274018.html
+++ b/q/274018.html
@@ -37,12 +37,11 @@
 <tr d-ix="8"><td>031</td><td>Perl 5 p</td><td>240708T162921Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274024#274024">Xcali</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>20</s> 19 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>žV5δôøJIlδå€üαßIgΘì
+<pre><code>žV5δôøJIlδå€üαßIgΘM
 </code></pre>
 <p>Input as a list of characters.<br />
-Output as a 05AB1E truthy/falsey result (only 1 is truthy in 05AB1E), so this will output either <code>01</code> or <code>1</code> as truthy and <code>00</code> or <code>0</code> as falsey.<br />
 Uses the QWERTY keyboard.</p>
-<p><a href="https://tio.run/##yy9OTMpM/f//6L4w03NbDm85vMPLMwfIWPqoac3hPec2Hp7vmX5uxuE1//9HKxUr6ShlA3EqEBcAcQkQZwJxMpQGyecqxQIA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfWXw4Qn/j@4LMz235fCWwzu8inOAjKWPmtYc3nNu4@H5xennZhxe89/FPlNJQaOkqLQko1JT6fBqICctMac4Fcip1fkfrVScnVpQkpmcWZyrpKPk6ufiH@7r6hcCZBeWJuaVZJZUApkpmcUFqTlARnZiZWJ2MZCRCMIgoiS1uARIhQf5@7mDuBmZxeWZOTlpiZkg9UqxAA" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p><a href="https://tio.run/##yy9OTMpM/f//6L4w03NbDm85vMPLMwfIWPqoac3hPec2Hp7vmX5uhu///9FKxUo6StlAnArEBUBcAsSZQJwMpUHyuUqxAA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfWWwy/@j@8JMz205vOXwDq/iHCBj6aOmNYf3nNt4eH5x@rkZvv91NGP@RysVZ6cWlGQmZxbnKukoufq5@If7uvqFANmFpYl5JZkllUBmSmZxQWoOkJGdWJmYXQxkJIIwiChJLS4BUuFB/n7uIG5GZnF5Zk5OWmImSL1SLAA" rel="nofollow noreferrer">verify all test cases</a>.</p>
 <p><strong>Explanation:</strong></p>
 
 <pre class="lang-python prettyprint-override"><code>žV       # Push [&quot;qwertyuiop&quot;,&quot;asdfghjkl&quot;,&quot;zxcvbnm&quot;]
@@ -58,12 +57,12 @@ I        # Push the input-list
     €    # Map over each inner list:
      ü   #  For each overlapping pair in this list:
       α  #   Take the absolute difference of the pair
-       ß # Push the flattened minimum
+       ß # Pop and push the flattened minimum
          # (1 if all are truthy; 0 if any are falsey; &quot;&quot; if empty)
 Ig       # Push the length of the input-list
   Θ      # Check whether this length is exactly 1
-   ì     # Prepend it in front of the earlier check
-         # (after which the result is output implicitly)
+M        # Push a copy of the largest value of the stack
+         # (which is output implicitly as result)
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <sup><s>69</s> <s>62</s> <s>60</s> <s>58</s></sup> 55 bytes</h1>
